@@ -1,1 +1,1 @@
-e1fdbf1 Now supports non predefined ternary diagrams
+02366c7 ternary2SpatialPolygonsDataFrame() renamed to ternary2SpatialPolygons()
